# pycyapi

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  DEVELOPER.md  HISTORY.md  MANIFEST.in  Makefile  README.md  bootstrap.sh  cliff.toml  configure-irods.sh  conftest.py  dagster.yaml  docker-compose.test.yml  example_pipeline.json  integration-tests.sh  integration_tests.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test.py  test_container.def  test_job.json  test_job_local.json  test_job_pbs.json  test_job_slurm.json  unit-tests.sh  utils.py  wait-for-postgres.sh
.github/workflows/: ci.yaml  ci.yml  commit.yml  release.yml
cluster/: cluster.py  irods.py  job.py
cluster/dagster/: pipelines.py  repository.py  solids.py  types.py
cluster/tests/: test_cluster.py  test_irods.py
clusterside/: __init__.py  bootstrapper.py  clusterside.py  comms.py  data.py  exceptions.py  executor.py  executors.py  samples.py  submitters.py  workflow.py
clusterside/dagster/: pipelines.py  repository.py  repository.yaml  solids.py  types.py
clusterside/tests/: test_executor.py  test_irods.py
config/dask/: jobqueue.yaml
dockerfiles/cli/: Dockerfile
dockerfiles/cluster/: Dockerfile  configure-slurm-db.sql  slurm.conf
dockerfiles/dind/: Dockerfile
dockerfiles/sandbox/: Dockerfile
dockerfiles/sind/: Dockerfile
dockerfiles/slurm/: Dockerfile
docs/: Makefile  conf.py  index.rst
docs/md/: authenticating.md  commands.md  install.md
docs/source/: clusterside.rst  conf.py  configuration.rst  index.rst  overview.rst
examples/: directory_input.yaml  directory_output.yaml  file_input.yaml  file_output.yaml  params.yaml  slurm.yaml  workflow_with_directory_input.yaml  workflow_with_directory_output.yaml  workflow_with_file_input.yaml  workflow_with_file_output.yaml  workflow_with_params.yaml  workflow_with_params_slurm.yaml
files/: submit.sh
integration_tests/: integration-tests.sh  test_job_local.json  test_job_slurm.json
plantit/: cli.py  commands.py  docker.py  slurm.py  utils.py
plantit/cyverse/: auth.py  cli.py  clients.py  commands.py
plantit/scripts/: cli.py  commands.py  generator.py  models.py
plantit/submit/: cli.py  commands.py  exceptions.py  models.py  ssh.py  utils.py
plantit/terrain/: auth.py  cli.py  clients.py  commands.py  exceptions.py
plantit/tests/: test_cli.py  test_docker.py  test_utils.py
plantit_cli/: cli.py  commands.py  config.py  options.py  plan.py  run.py  status.py  utils.py
plantit_cli/cli/: base.py  dask.py  irods.py  launcher.py  terrain.py
plantit_cli/collection/: collection.py  irods.py  terrain.py  util.py
plantit_cli/dagster/: dagster.yaml  logging.py  solids.py
plantit_cli/dask_jobqueue/: config.py  core.py  local.py  slurm.py
plantit_cli/executor/: executor.py  inprocessexecutor.py  jobqueue.py  jobqueueexecutor.py  local.py  slurm_job.sh
plantit_cli/runner/: dask_commands.py  launcher_commands.py  runner.py
plantit_cli/store/: collection.py  irods.py  irods_commands.py  (+9 more)
plantit_cluster/: cli.py  cluster.py  comms.py  exceptions.py  irods.py  job.py  pipeline.py  run.py
pycyapi/: __init__.py  auth.py  cli.py  clients.py  commands.py  utils.py
pycyde/: cli.py  clients.py  commands.py  tokens.py  utils.py
pydeapi/: cli.py  commands.py  exceptions.py  terrain_store.py  tokens.py  utils.py
samples/: flow_with_bind_mounts.yaml  flow_with_file_input.yaml  flow_with_parameters.yaml  flow_with_parameters_slurm.yaml
scripts/: bootstrap.sh  create-env-file.sh  create-plantit-config-file.sh  lint.py  slurm_template.sh  test-cli.sh  update_version.py
tests/: process.py  spelling_dict.txt  test.py  test_bootstrapper.py  test_reducers.py
(+101 files in other folders)
