[metadata]
name = pycyapi
version = file: version.txt
description = Python client for the CyVerse Science APIs
long_description = file: README.md
long_description_content_type = text/markdown
author = Computational Plant Science Lab
author_email = wbonelli@uga.edu
maintainer = Wes Bonelli
maintainer_email = wbonelli@uga.edu
license = BSD-3-Clause
license_files = LICENSE.md
keywords = hpc, slurm, singularity
url = https://github.com/Computational-Plant-Science/pycyapi

[options]
python_requires = >= 3.8
install_requires =
    click
    httpx
    filelock
    paramiko
    pyaml
    python-irodsclient
    requests
    tenacity
    tqdm
setup_requires =
    setuptools
    wheel
include_package_data = True

[options.extras_require]
lint =
    black
    flake8
    isort
    pylint
test =
    %(lint)s
    coverage
    coveralls
    jupyter
    jupytext
    pytest
    pytest-asyncio
    pytest-dotenv
    pytest-xdist

[options.entry_points]
console_scripts =
    pycyapi = pycyapi.cli:cli
